--- a/Assignement-2/index.html
+++ b/Assignement-2/index.html
@@ -22,8 +22,7 @@
         </nav>
         <div class="header-description">
             <h1 class="header-title">Brand New Group of Architects</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-                in some form, by injected humour, or randomised words which don't look even</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         </div>
         <button class="btn-orange">Explore More</button>
         <img src="images/banner.png" alt="">
@@ -39,9 +38,7 @@
             <div style="align-self: center;" class="main-section-1-b">
                 <div>
                     <h3 class="features-title"> <span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="feature">Features</span></h3>
-                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected humour, or randomised words
-                        which don't look even</p>
+                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 </div>
                 <button class="btn-orange">Explore More</button>
             </div>
@@ -49,32 +46,22 @@
         <section class="main-section-2">
             <div class="features-description">
                 <h3 class="feature-title">Features you will love & enjoy</h3>
-                <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even</p>
+                <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don'tlook even</p>
                 <div class="feature">
                     <h6 class="paragraph-title">Dexktop & Mobile Version</h6>
-                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected humour, or randomised...........
-                    </p>
+                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="feature">
                     <h6 class="paragraph-title">Drag & Drop Builder</h6>
-                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected humour, or randomised...........
-                    </p>
+                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="feature">
                     <h6 class="paragraph-title">Awesome Modern Design</h6>
-                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected humour, or randomised...........
-                    </p>
+                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="feature">
                     <h6 class="paragraph-title">Super Easy to Edit</h6>
-                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected humour, or randomised...........
-                    </p>
+                    <p class="features-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
             <div class="feature-image">
@@ -85,8 +72,7 @@
         <section class="main-section-3">
             <div class="main-section-3-description">
                 <h3 class="features-title">Some Facts</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                    sufferedalteration.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have sufferedalteration.</p>
             </div>
             <div class="some-facts">
                 <div class="fact">
